--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             }
 
             body {
-                font-family: Verdana Arial Helvetica sans-serif;
+                font-family: Verdana, Arial, Helvetica, Lucidia Grande;
                 font-size: 16px;
             }
         </style>
