Base64 the sprites

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/dot-luv/jquery-ui.css"/>
     <link rel="stylesheet" type="text/css" href="demo/demo.css"/>
+    <link rel="stylesheet" type="text/css" href="sprites.css"/>
 </head>
 <body>
     <div>
